crates/backends/cuda/tests/snapshots/golden_cu__example_zip_demo.snap
---
source: crates/backends/cuda/tests/golden_cu.rs
expression: cu
---
// mapal-backend-cuda emitted translation unit
// build: nvcc -std=c++17 -fmad=true -arch=sm_89 prog.cu libmapal_rt.a -lpthread -ldl -lm -o prog
// DESIGN §4 (amended S24b, Sapir): -fmad=true is the product/perf default; conformance runs pin -fmad=false for oracle bit-parity. Host -march=native/-mfma stays forbidden in conformance.

#include <cstdint>
#include <cstdio>
#include <cstdlib>
#include <cstddef>
#include <cmath>
#include <cuda_runtime.h>

extern "C" {
void mapal_print_i32(int32_t v, bool newline);
void mapal_print_i64(int64_t v, bool newline);
void mapal_print_u8(uint8_t v, bool newline);
void mapal_print_bool(bool v, bool newline);
void mapal_print_f32(float v, bool newline);
void mapal_print_f64(double v, bool newline);
void mapal_print_str(const uint8_t* ptr, size_t len, bool newline);
// Matches the Rust `-> !` (mapal-rt/src/lib.rs): lets the compiler drop the
// dead fall-through after host guards. C++11 attribute, legal on an
// extern "C" declaration; host-only, so no device-pass concern.
[[noreturn]] void mapal_trap(uint32_t kind);
}

// --- trap flag + CUDA error protocol (DESIGN §3) ---------------------------
static unsigned int* d_trap = nullptr;

// Assert one CUDA API return; on error print to stderr and exit 102 (the
// harness-visible infra-failure class — never an R1 data point).
static void cu_check(cudaError_t err, const char* what) {
    if (err != cudaSuccess) {
        fprintf(stderr, "flow-cuda infra error at %s: %s\n", what, cudaGetErrorString(err));
        exit(102);
    }
}

// Zero the trap flag — once per process, called at main start (H→D, §2 item 3).
static void trap_init() {
    cu_check(cudaMalloc((void**)&d_trap, sizeof(unsigned int)), "cudaMalloc(d_trap)");
    cu_check(cudaMemset(d_trap, 0, sizeof(unsigned int)), "cudaMemset(d_trap)");
}

// Trap-capable launch sites call this after EVERY such kernel launch (#14:
// a provably trap-free kernel takes no trap argument and skips this
// readback): cudaGetLastError
// (exit-102 protocol), then a host-synchronizing D→H read of the flag (the
// memcpy is the sync point); nonzero kind ⇒ mapal_trap(kind - 1) on the host
// (exit 101) — the flag stores kind + 1 (0 = quiescent after trap_init's
// memset; 1 = div_zero, 2 = index_oob), decoded here to the mapal-rt kinds.
[[maybe_unused]] static void trap_check_after_launch() {
    cu_check(cudaGetLastError(), "kernel launch");
    unsigned int kind = 0;
    cu_check(cudaMemcpy(&kind, d_trap, sizeof(unsigned int), cudaMemcpyDeviceToHost),
             "cudaMemcpy(d_trap)");
    if (kind != 0) {
        mapal_trap(kind - 1);
    }
}

static const char str0[] = "c[0]  = ";
static const char str1[] = "c[15] = ";
static const char str2[] = "e[0]  = ";
static const char str3[] = "e[15] = ";

struct FlowProd_int32_t_int32_t {
    int32_t f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_t_int32_t) == 8, "FlowProd_int32_t_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_tp_int32_tp {
    int32_t* f0;
    int32_t* f1;
};
static_assert(sizeof(FlowProd_int32_tp_int32_tp) == 16, "FlowProd_int32_tp_int32_tp: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_tp_int32_t {
    int32_t* f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_tp_int32_t) == 16, "FlowProd_int32_tp_int32_t: abi_sizeof drift (plan-smart-arenas)");

static __host__ __device__ int32_t fn1(FlowProd_int32_t_int32_t in);
static __host__ __device__ int32_t fn2(FlowProd_int32_t_int32_t in);

static __host__ __device__ int32_t fn1(FlowProd_int32_t_int32_t in) {
  int32_t o1;
  o1 = (int32_t)((uint32_t)in.f0 + (uint32_t)in.f1);
  return o1;
}
static __host__ __device__ int32_t fn2(FlowProd_int32_t_int32_t in) {
  int32_t o1;
  o1 = (int32_t)((uint32_t)in.f0 + (uint32_t)in.f1);
  return o1;
}

__global__ void k0_0(FlowProd_int32_t_int32_t* out, int32_t* a) {
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 16ULL) {
    out[i].f0 = (int32_t)i;
    out[i].f1 = a[i];
  }
}
__global__ void k0_1(FlowProd_int32_t_int32_t* out, int32_t* a, int32_t* b) {
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 16ULL) {
    out[i].f0 = a[i];
    out[i].f1 = b[i];
  }
}
__global__ void k0_2(int32_t* out, FlowProd_int32_t_int32_t* in) {
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 16ULL) {
    out[i] = fn1(in[i]);
  }
}
__global__ void k0_3(int32_t* result, int32_t* arr, int64_t idx) {
  *result = arr[(unsigned long long)idx];
}
__global__ void k0_5(int32_t* out, FlowProd_int32_t_int32_t* in) {
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 16ULL) {
    out[i] = fn2(in[i]);
  }
}

static void mapal_main();

static void mapal_main() {
  int32_t* o2 = nullptr;
  int32_t* o3 = nullptr;
  int32_t* o5 = nullptr;
  int32_t* o6 = nullptr;
  FlowProd_int32_tp_int32_tp o7;
  FlowProd_int32_t_int32_t* o8 = nullptr;
  int32_t* o9 = nullptr;
  int32_t o13;
  int32_t o14;
  int32_t o19;
  int32_t o20;
  FlowProd_int32_t_int32_t* o22 = nullptr;
  int32_t* o23 = nullptr;
  int32_t o27;
  int32_t o28;
  int32_t o33;
  int32_t o34;
  char* arena0 = nullptr;
  int32_t* t2 = nullptr;
  int32_t* t3 = nullptr;
  int32_t* t4 = nullptr;
  int32_t* t5 = nullptr;
  cu_check(cudaMalloc((void**)&arena0, 2560ULL), "cudaMalloc(arena0)");
  static const int32_t lit0[16] = { 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 };
  o2 = (int32_t*)(arena0 + 0ULL);
  cu_check(cudaMemcpy(o2, lit0, sizeof(lit0), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  o22 = (FlowProd_int32_t_int32_t*)(arena0 + 256ULL);
  k0_0<<<(unsigned int)((16ULL + 255ULL) / 256ULL), 256>>>(o22, o2);
  static const int32_t lit1[16] = { 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100 };
  o3 = (int32_t*)(arena0 + 512ULL);
  cu_check(cudaMemcpy(o3, lit1, sizeof(lit1), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  o5 = o2;
  o6 = o3;
  o7.f0 = o5;
  o7.f1 = o6;
  o8 = (FlowProd_int32_t_int32_t*)(arena0 + 768ULL);
  k0_1<<<(unsigned int)((16ULL + 255ULL) / 256ULL), 256>>>(o8, o5, o6);
  o9 = (int32_t*)(arena0 + 1024ULL);
  k0_2<<<(unsigned int)((16ULL + 255ULL) / 256ULL), 256>>>(o9, o8);
  mapal_print_str((const uint8_t*)str0, 8, false);
  t2 = (int32_t*)(arena0 + 1280ULL);
  k0_3<<<1, 1>>>(t2, o9, (int64_t)0);
  cu_check(cudaMemcpy(&o13, t2, sizeof(int32_t), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
  o14 = o13;
  mapal_print_i32(o14, true);
  mapal_print_str((const uint8_t*)str1, 8, false);
  t3 = (int32_t*)(arena0 + 1536ULL);
  k0_3<<<1, 1>>>(t3, o9, (int64_t)15);
  cu_check(cudaMemcpy(&o19, t3, sizeof(int32_t), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
  o20 = o19;
  mapal_print_i32(o20, true);
  o23 = (int32_t*)(arena0 + 1792ULL);
  k0_5<<<(unsigned int)((16ULL + 255ULL) / 256ULL), 256>>>(o23, o22);
  mapal_print_str((const uint8_t*)str2, 8, false);
  t4 = (int32_t*)(arena0 + 2048ULL);
  k0_3<<<1, 1>>>(t4, o23, (int64_t)0);
  cu_check(cudaMemcpy(&o27, t4, sizeof(int32_t), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
  o28 = o27;
  mapal_print_i32(o28, true);
  mapal_print_str((const uint8_t*)str3, 8, false);
  t5 = (int32_t*)(arena0 + 2304ULL);
  k0_3<<<1, 1>>>(t5, o23, (int64_t)15);
  cu_check(cudaMemcpy(&o33, t5, sizeof(int32_t), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
  o34 = o33;
  mapal_print_i32(o34, true);
  cu_check(cudaFree(arena0), "cudaFree(arena0)");
  return;
}

int main() {
  trap_init();
  mapal_main();
  cu_check(cudaFree(d_trap), "cudaFree(d_trap)");
  return 0;
}
