crates/backends/cuda/tests/snapshots/golden_cu__micro_loop_update.snap
---
source: crates/flow-backend-cuda/tests/golden_cu.rs
expression: cu
---
// flow-backend-cuda emitted translation unit
// build: nvcc -std=c++17 -fmad=false -arch=sm_89 prog.cu libflow_rt.a -lpthread -ldl -lm -o prog
// DESIGN §4: -fmad=false pins oracle float parity; host -march=native/-mfma forbidden.

#include <cstdint>
#include <cstdio>
#include <cstdlib>
#include <cstddef>
#include <cmath>
#include <cuda_runtime.h>

extern "C" {
void flow_print_i32(int32_t v, bool newline);
void flow_print_i64(int64_t v, bool newline);
void flow_print_u8(uint8_t v, bool newline);
void flow_print_bool(bool v, bool newline);
void flow_print_f32(float v, bool newline);
void flow_print_f64(double v, bool newline);
void flow_print_str(const uint8_t* ptr, size_t len, bool newline);
// Matches the Rust `-> !` (flow-rt/src/lib.rs): lets the compiler drop the
// dead fall-through after host guards. C++11 attribute, legal on an
// extern "C" declaration; host-only, so no device-pass concern.
[[noreturn]] void flow_trap(uint32_t kind);
}

// --- trap flag + CUDA error protocol (DESIGN §3) ---------------------------
static unsigned int* d_trap = nullptr;

// Assert one CUDA API return; on error print to stderr and exit 102 (the
// harness-visible infra-failure class — never an R1 data point).
static void cu_check(cudaError_t err, const char* what) {
    if (err != cudaSuccess) {
        fprintf(stderr, "flow-cuda infra error at %s: %s\n", what, cudaGetErrorString(err));
        exit(102);
    }
}

// Zero the trap flag — once per process, called at main start (H→D, §2 item 3).
static void trap_init() {
    cu_check(cudaMalloc((void**)&d_trap, sizeof(unsigned int)), "cudaMalloc(d_trap)");
    cu_check(cudaMemset(d_trap, 0, sizeof(unsigned int)), "cudaMemset(d_trap)");
}

// Trap-capable launch sites call this after EVERY such kernel launch (#14:
// a provably trap-free kernel takes no trap argument and skips this
// readback): cudaGetLastError
// (exit-102 protocol), then a host-synchronizing D→H read of the flag (the
// memcpy is the sync point); nonzero kind ⇒ flow_trap(kind - 1) on the host
// (exit 101) — the flag stores kind + 1 (0 = quiescent after trap_init's
// memset; 1 = div_zero, 2 = index_oob), decoded here to the flow-rt kinds.
[[maybe_unused]] static void trap_check_after_launch() {
    cu_check(cudaGetLastError(), "kernel launch");
    unsigned int kind = 0;
    cu_check(cudaMemcpy(&kind, d_trap, sizeof(unsigned int), cudaMemcpyDeviceToHost),
             "cudaMemcpy(d_trap)");
    if (kind != 0) {
        flow_trap(kind - 1);
    }
}

struct FlowProd_int32_tp_int32_t {
    int32_t* f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_tp_int32_t) == 16, "FlowProd_int32_tp_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_t_int32_t {
    int32_t f0;
    int32_t f1;
};
static_assert(sizeof(FlowProd_int32_t_int32_t) == 8, "FlowProd_int32_t_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_tp_int32_t_int32_t {
    int32_t* f0;
    int32_t f1;
    int32_t f2;
};
static_assert(sizeof(FlowProd_int32_tp_int32_t_int32_t) == 16, "FlowProd_int32_tp_int32_t_int32_t: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_FlowProd_int32_tp_int32_t_bool {
    FlowProd_int32_tp_int32_t f0;
    bool f1;
};
static_assert(sizeof(FlowProd_FlowProd_int32_tp_int32_t_bool) == 24, "FlowProd_FlowProd_int32_tp_int32_t_bool: abi_sizeof drift (plan-smart-arenas)");
struct FlowProd_int32_tp_bool {
    int32_t* f0;
    bool f1;
};
static_assert(sizeof(FlowProd_int32_tp_bool) == 16, "FlowProd_int32_tp_bool: abi_sizeof drift (plan-smart-arenas)");

__global__ void k0_0(int32_t* out, int32_t* src, int64_t idx, int32_t val, unsigned int* trap) {
  if (idx < 0 || idx >= (int64_t)4) { *trap = 2u; return; }
  unsigned long long i = (unsigned long long)blockIdx.x * blockDim.x + threadIdx.x;
  if (i < 4ULL) {
    out[i] = ((int64_t)i == idx) ? val : src[i];
  }
}
__global__ void k1_0(int32_t* result, int32_t* arr, int64_t idx) {
  *result = arr[(unsigned long long)idx];
}

static int32_t* fn0(int32_t in);
static void flow_main();

static int32_t* fn0(int32_t in) {
  int32_t o0;
  int32_t* o1 = nullptr;
  int32_t* o2 = nullptr;
  FlowProd_int32_tp_int32_t o3;
  FlowProd_int32_tp_int32_t o4;
  int32_t* o5 = nullptr;
  int32_t o6;
  FlowProd_int32_t_int32_t o7;
  bool o8;
  FlowProd_int32_t_int32_t o9;
  int32_t o10;
  FlowProd_int32_tp_int32_t_int32_t o11;
  int32_t* o12 = nullptr;
  FlowProd_int32_t_int32_t o13;
  int32_t o14;
  FlowProd_int32_tp_int32_t o15;
  FlowProd_FlowProd_int32_tp_int32_t_bool o16;
  FlowProd_int32_tp_bool o17;
  char* arena0 = nullptr;
  cu_check(cudaMalloc((void**)&arena0, 256ULL), "cudaMalloc(arena0)");
  o0 = in;
  static const int32_t lit0[4] = { 0, 0, 0, 0 };
  o2 = (int32_t*)(arena0 + 0ULL);
  cu_check(cudaMemcpy(o2, lit0, sizeof(lit0), cudaMemcpyHostToDevice), "cudaMemcpy(literal)");
  o3.f1 = 0;
  o3.f0 = o2;
  o4 = o3;
  while (true) {
    o7.f1 = o0;
    o5 = o4.f0;
    o6 = o4.f1;
    o17.f0 = o5;
    o7.f0 = o6;
    o8 = o7.f0 < o7.f1;
    o17.f1 = o8;
    if (!o17.f1) { break; }
    o9.f1 = 10;
    o13.f1 = 1;
    o11.f0 = o5;
    o9.f0 = o6;
    o11.f1 = o6;
    o13.f0 = o6;
    o10 = (int32_t)((uint32_t)o9.f0 * (uint32_t)o9.f1);
    o14 = (int32_t)((uint32_t)o13.f0 + (uint32_t)o13.f1);
    o16.f1 = o8;
    o11.f2 = o10;
    o15.f1 = o14;
    o12 = o5;
    k0_0<<<(unsigned int)((4ULL + 255ULL) / 256ULL), 256>>>(o12, o5, (int64_t)o6, o10, d_trap);
    trap_check_after_launch();
    o15.f0 = o12;
    o16.f0 = o15;
    o4 = o16.f0;
  }
  o1 = o17.f0;
  bool escaped0 = ((char*)o1 >= (char*)arena0 && (char*)o1 < (char*)arena0 + 256ULL);
  if (!escaped0) {
    cu_check(cudaFree(arena0), "cudaFree(arena0)");
  }
  return o1;
}

static void flow_main() {
  int32_t* o2 = nullptr;
  FlowProd_int32_tp_int32_t o3;
  int32_t o4;
  int32_t o5;
  char* arena0 = nullptr;
  int32_t* t0 = nullptr;
  cu_check(cudaMalloc((void**)&arena0, 256ULL), "cudaMalloc(arena0)");
  o2 = fn0(4);
  o3.f1 = 2;
  o3.f0 = o2;
  t0 = (int32_t*)(arena0 + 0ULL);
  k1_0<<<1, 1>>>(t0, o2, (int64_t)2);
  cu_check(cudaMemcpy(&o4, t0, sizeof(int32_t), cudaMemcpyDeviceToHost), "cudaMemcpy(index)");
  o5 = o4;
  flow_print_i32(o5, true);
  cu_check(cudaFree(arena0), "cudaFree(arena0)");
  return;
}

int main() {
  trap_init();
  flow_main();
  cu_check(cudaFree(d_trap), "cudaFree(d_trap)");
  return 0;
}
